[package]
name = "blaster"
version = "0.1.0"
edition = "2021"
authors = ["Scott Shannon<scott.shannon@connectiverx.com"]
description = "Simple load generator for a single endpoint"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.1", features = ["derive", "env"] }
reqwest = "0.11.24"
tokio = { version = "1.36.0",features = ["rt-multi-thread","macros"]}
