[package]
name = "blaster"
version = "0.1.0"
edition = "2021"
authors = ["Scott Shannon<scott.shannon@connectiverx.com"]
description = "Simple load generator for a single endpoint"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env"] }
log = "0.4.29"
reqwest = "0.12.28"
simple_logger = "5.1.0"
tokio = { version = "1.48.0",features = ["rt-multi-thread","macros"]}
